--- a/index.css
+++ b/index.css
@@ -29,3 +29,24 @@
   margin-right: 10px;
 }
 
+h1 {
+  color: rgb(97, 168, 150) ;
+  padding-left: 15px;
+  padding-top: 30px;
+  font-family: 'Times New Roman', Times, serif ;
+  font-weight: thick;
+}
+.card>hr {
+  border-width: 3px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+#nav {
+  box-shadow: 0 5px 5px -1px rgba(0,0,0,.2);
+}
+
+#footer {
+  background-color: greenyellow;
+  text-align: center;
+}
