--- a/index.css
+++ b/index.css
@@ -42,11 +42,23 @@ h1 {
   margin-right: 30px;
 }
 
+hr{
+  border-width: 3px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
 #nav {
   box-shadow: 0 5px 5px -1px rgba(0,0,0,.2);
 }
 
 #footer {
-  background-color: greenyellow;
+  background-color: rgb(85, 83, 83);
   text-align: center;
+  height: 50px;
+}
+
+#top-footer{
+  background-color:  rgb(97, 168, 150) ;
+  padding-bottom: 60px;
 }
