--- a/index.css
+++ b/index.css
@@ -30,26 +30,26 @@
 }
 
 h1 {
-  color: rgb(97, 168, 150) ;
+  color: rgb(97, 168, 150);
   padding-left: 15px;
   padding-top: 30px;
-  font-family: 'Times New Roman', Times, serif ;
+  font-family: "Times New Roman", Times, serif;
   font-weight: thick;
 }
-.card>hr {
+.card > hr {
   border-width: 3px;
   margin-left: 30px;
   margin-right: 30px;
 }
 
-hr{
+hr {
   border-width: 3px;
   margin-left: 30px;
   margin-right: 30px;
 }
 
 #nav {
-  box-shadow: 0 5px 5px -1px rgba(0,0,0,.2);
+  box-shadow: 0 5px 5px -1px rgba(0, 0, 0, 0.2);
 }
 
 #footer {
@@ -58,7 +58,21 @@ hr{
   height: 50px;
 }
 
-#top-footer{
-  background-color:  rgb(97, 168, 150) ;
+#top-footer {
+  background-color: rgb(97, 168, 150);
   padding-bottom: 60px;
+}
+
+#card-small {
+  height: 300px;
+  width: 300px;
+}
+.top-buffer {
+  margin-top: 20px;
+}
+.bottom-buffer {
+  margin-bottom: 20px;
+}
+#card-main {
+  margin-bottom: 30px;
 }
