--- a/index.css
+++ b/index.css
@@ -77,3 +77,17 @@ hr {
   margin-bottom: 30px;
 }
 
+.card-title {
+  text-align: center;
+  margin-top: 171px  ;
+  background-color: rgb(97, 168, 150);
+  width:250px ;
+  height: 45px;
+  align-items: center;
+  margin-right: auto;
+  
+}
+#card-title{
+  width: 300px;
+  left: -6px;
+}
